5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4476/executions/1723_2496.log
== TEST (2019-05-07 21:33:11) 
-- CODE:
a = int(input("valor: "))

va = 0

while (a = -1):
	va = va + a
	a = int(input("valor: "))
print(va)	
-- ERROR:
File "XXXX", line 5
    while (a = -1):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 21:33:25) 
-- CODE:
a = int(input("valor: "))

va = 0

while (a == -1):
	va = va + a
	a = int(input("valor: "))
print(va)	
-- ERROR:
File "XXXX", line 5
    while (a = -1):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 21:34:14) 
-- CODE:
a = int(input("valor: "))

va = 0

while (a == -1):
	va = va + a
	a = int(input("valor: "))
print(va)	
-- ERROR:
File "XXXX", line 5
    while (a = -1):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 21:34:41) 
-- CODE:

va = 0

while (a == -1):
	va = va + a
	a = int(input("valor: "))
print(va)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    while (a == -1):
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 21:35:01) 
-- CODE:
a = 1
va = 0

while (a == -1):
	va = va + a
	a = int(input("valor: "))
print(va)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    while (a == -1):
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 21:35:23) 
-- CODE:
a = int(input("valor: "))

va = 0

while (a == -1):
	va = va + a
	a = int(input("valor: "))

print(va)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    while (a == -1):
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 21:40:43) 
-- CODE:
c = 0
va = 0

a = int(input("valor: "))


while (a == -1):
	va = va + a
	c = c + 1
	a = int(input("valor: "))

print(va)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    while (a == -1):
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 21:43:51) 
-- CODE:
a = int(input("valor: "))

while (a == -1):
	a = int(input("valor: "))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    while (a == -1):
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 21:45:19) 
-- CODE:
a = int(input("valor: "))

while (a == -1):
	a = a + 1
	a = int(input("valor: "))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    while (a == -1):
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 21:45:26) 
-- CODE:
a = int(input("valor: "))

while (a == -1):
	a = a + 1
	a = int(input("valor: "))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    while (a == -1):
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 21:47:36) 
-- CODE:
a = int(input("valor: "))

while (a != -1):
	a = a + 1
	a = int(input("valor: "))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    while (a == -1):
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 21:47:54) 
-- CODE:
a = int(input("valor: "))

while (a != -1):
	a = int(input("valor: "))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    while (a == -1):
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 21:49:23) 
-- CODE:
a = int(input("valor: "))

va = 0

while (a != -1):
	va = va + a
	a = int(input("valor: "))
print(va)

-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-07 21:49:40) 
-- CODE:
a = int(input("valor: "))

va = 0

while (a != -1):
	va = va + a
	a = int(input("valor: "))
print(va)

-- EXECUTION TIME:
0.188199
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
874
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
32653
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
